update test case