@@ -70,22 +70,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
-                <configuration>
-                    <!-- 添加Spock测试用例的发现机制 -->
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m
-                        -javaagent:${settings.localRepository}/org/spockframework/spock-core/${spock.version}/spock-core-${spock.version}.jar
-                        -Dspock.configuration=${project.basedir}/src/test/resources/spock-configuration.xml
-                    </argLine>
-                    <includes>
-                        <include>**/*.groovy</include>
-                    </includes>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 </project>
